--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -795,10 +796,10 @@
             </objects>
             <point key="canvasLocation" x="3378" y="124"/>
         </scene>
-        <!--Setting View Controller-->
+        <!--Settings-->
         <scene sceneID="YCQ-pa-ffu">
             <objects>
-                <viewController id="FfN-ax-53o" customClass="SGSettingViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SGSettingViewController" id="FfN-ax-53o" customClass="SGSettingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="umg-pK-2YH"/>
                         <viewControllerLayoutGuide type="bottom" id="iH9-Eb-siA"/>
@@ -806,12 +807,63 @@
                     <view key="view" contentMode="scaleToFill" id="wRy-z1-aiI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offset" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hks-fg-FCw">
+                                <rect key="frame" x="32" y="290" width="47.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="OIN-Xj-O8j">
+                                <rect key="frame" x="30" y="318.5" width="315" height="31"/>
+                                <connections>
+                                    <action selector="sliderValueChange" destination="FfN-ax-53o" eventType="valueChanged" id="dsp-iH-11x"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0O-ZR-um0">
+                                <rect key="frame" x="142.5" y="356" width="90" height="30"/>
+                                <color key="backgroundColor" red="0.2790815814" green="0.36459518870000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="5eu-fo-EBK"/>
+                                    <constraint firstAttribute="height" constant="30" id="FzY-iW-V5G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Default">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="setDefaultValue" destination="FfN-ax-53o" eventType="touchUpInside" id="gKl-nE-a7B"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.14901960784313725" green="0.1764705882352941" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="OIN-Xj-O8j" secondAttribute="trailing" constant="16" id="W1w-Mn-dpI"/>
+                            <constraint firstItem="OIN-Xj-O8j" firstAttribute="centerY" secondItem="wRy-z1-aiI" secondAttribute="centerY" id="Z82-JZ-fbg"/>
+                            <constraint firstItem="I0O-ZR-um0" firstAttribute="centerX" secondItem="wRy-z1-aiI" secondAttribute="centerX" id="bIj-ud-2hh"/>
+                            <constraint firstItem="I0O-ZR-um0" firstAttribute="top" secondItem="OIN-Xj-O8j" secondAttribute="bottom" constant="8" id="fqR-YH-eiI"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Hks-fg-FCw" secondAttribute="trailingMargin" id="fqT-Mn-XI0"/>
+                            <constraint firstItem="OIN-Xj-O8j" firstAttribute="centerX" secondItem="wRy-z1-aiI" secondAttribute="centerX" id="j0y-lp-dDT"/>
+                            <constraint firstItem="OIN-Xj-O8j" firstAttribute="leading" secondItem="wRy-z1-aiI" secondAttribute="leadingMargin" constant="16" id="pIa-ni-6Vd"/>
+                            <constraint firstItem="Hks-fg-FCw" firstAttribute="leading" secondItem="wRy-z1-aiI" secondAttribute="leadingMargin" constant="16" id="r1A-4m-7xu"/>
+                            <constraint firstItem="OIN-Xj-O8j" firstAttribute="top" secondItem="Hks-fg-FCw" secondAttribute="bottom" constant="8" id="r2l-T2-URj"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Settings" id="Hfq-ur-5Kw">
+                        <barButtonItem key="leftBarButtonItem" image="ic_menu" id="clg-44-Jkp">
+                            <connections>
+                                <action selector="presentLeftMenuViewController:" destination="FfN-ax-53o" id="EFD-Kt-zrk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="sliderView" destination="OIN-Xj-O8j" id="3Ym-pO-Wgy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gue-Fl-kH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4044" y="119"/>
+            <point key="canvasLocation" x="4044" y="118.29085457271366"/>
         </scene>
     </scenes>
     <resources>
