--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -281,6 +281,9 @@
                                                 <state key="normal" title="Show Clean Area">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="showHideDirtyArea" destination="GMM-Lk-rxl" eventType="touchUpInside" id="W8Y-dk-1P2"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -369,7 +372,7 @@
                                                         <rect key="frame" x="16" y="8" width="24" height="24"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqs-mR-Yx1">
-                                                        <rect key="frame" x="48" y="20" width="0.0" height="0.0"/>
+                                                        <rect key="frame" x="48" y="20.5" width="0.0" height="0.0"/>
                                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                                         <color key="textColor" red="0.69803921570000005" green="0.70588235290000001" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -377,12 +380,12 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstItem="dqs-mR-Yx1" firstAttribute="centerY" secondItem="mGy-79-AnT" secondAttribute="centerY" id="7xt-Va-A0C"/>
-                                                    <constraint firstItem="ca4-mx-CUt" firstAttribute="leading" secondItem="mGy-79-AnT" secondAttribute="leading" constant="16" id="SwF-A4-dKy"/>
-                                                    <constraint firstItem="dqs-mR-Yx1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ca4-mx-CUt" secondAttribute="trailing" constant="8" symbolic="YES" id="gEy-gZ-f9U"/>
+                                                    <constraint firstItem="dqs-mR-Yx1" firstAttribute="leading" secondItem="ca4-mx-CUt" secondAttribute="trailing" constant="8" id="FLl-jl-9v6"/>
+                                                    <constraint firstItem="ca4-mx-CUt" firstAttribute="centerY" secondItem="mGy-79-AnT" secondAttribute="centerY" id="XTF-sU-x9r"/>
                                                     <constraint firstAttribute="height" constant="40" id="hpz-aW-6be"/>
-                                                    <constraint firstAttribute="trailing" secondItem="dqs-mR-Yx1" secondAttribute="trailing" constant="327" id="wFR-fU-dNA"/>
-                                                    <constraint firstItem="ca4-mx-CUt" firstAttribute="centerY" secondItem="mGy-79-AnT" secondAttribute="centerY" id="zIF-7E-uKj"/>
+                                                    <constraint firstItem="ca4-mx-CUt" firstAttribute="leading" secondItem="mGy-79-AnT" secondAttribute="leading" constant="16" id="jVy-4L-gPe"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dqs-mR-Yx1" secondAttribute="trailing" constant="20" symbolic="YES" id="lEc-Jl-Pae"/>
+                                                    <constraint firstItem="dqs-mR-Yx1" firstAttribute="centerY" secondItem="mGy-79-AnT" secondAttribute="centerY" id="xfo-Tg-19U"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -439,6 +442,7 @@
                         <outlet property="dateLabel" destination="vf6-1m-teY" id="bEn-0u-zZL"/>
                         <outlet property="gridView" destination="1i3-CK-I30" id="Otu-cG-zuK"/>
                         <outlet property="locationLabel" destination="dqs-mR-Yx1" id="Dog-MC-4H8"/>
+                        <outlet property="showDirtyAreaButton" destination="UoU-fQ-oIo" id="LKx-WA-GPf"/>
                         <outlet property="takenImageView" destination="ZWk-gu-8EF" id="Z9S-bY-Xhk"/>
                         <outlet property="valueLabel" destination="r8w-NZ-kdO" id="Smr-UE-vmI"/>
                     </connections>
