--- a/SmartGel/Base.lproj/Main.storyboard
+++ b/SmartGel/Base.lproj/Main.storyboard
@@ -400,10 +400,16 @@
                     <navigationItem key="navigationItem" title="Edit" id="axK-5o-cig">
                         <barButtonItem key="leftBarButtonItem" image="ic_back" id="0FN-rM-RTS">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="backButtonClicked:" destination="FIQ-WK-zEP" id="BSB-zN-RzT"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="0Kf-fn-9u4"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <connections>
+                        <outlet property="takenImageView" destination="lZs-39-uZw" id="uGM-K0-loj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wWw-fs-92t" sceneMemberID="firstResponder"/>
             </objects>
